2006-07-21  Chris Dunlap  <cdunlap@llnl.gov>

	* src/etc/munge.init.in: Removed "--force" from OPTIONS var.

2006-07-20  Chris Dunlap  <cdunlap@llnl.gov>

	* config/x_ac_debug.m4: Changed behavior to only alter CFLAGS if they
	  are not explicitly set.

	* src/munged/munged.c(main): Prevented PRNG seed from being written on
	  exit if an error was encountered while reading it during startup.
	* src/munged/random.c(random_init): Changed to ignore PRNG seed unless
	  it has proper mode, ownership, and permissions.
	* src/munged/random.h(random_init): Changed prototype to return int.

	* src/munged/auth_recv.c(auth_recv_init): Tweaked err msg verbage.

	* src/etc/Makefile.am, src/libcommon/Makefile.am,
	  src/libmunge/Makefile.am, src/munge/Makefile.am,
	  src/munged/Makefile.am: Tweaked dir perms via install-data-local.

	* src/etc/Makefile.am, src/libmunge/Makefile.am: Tweaked dir perms.

	* src/munged/munged.c(main): Moved root privs test (if needed) to
	  after parse_cmdline().

	* munge.spec: Specified perms & daemon-ownership for munge-owned dirs.
	* src/etc/Makefile.am: Changed /var/lib/munge and /var/log/munge perms.
	* src/etc/munge.init.in: Changed to run as the "daemon" user.

	* src/munged/conf.c(display_help): Added defaults to help message.

	* src/munged/conf.c: Disabled "--auth-pipe-dir" & "--auth-file-dir"
	  unless MUNGE_AUTH_RECVFD is defined.
	* src/munged/auth_recv.c, src/libmunge/auth_send.c,
	  src/libcommon/auth_policy.h: Renamed MUNGE_AUTH_RECVFD_COMMON
	  to MUNGE_AUTH_RECVFD.

	* src/munged/munged.8.in: Tweaked verbage.

2006-07-19  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/munge_defs.h: Added MUNGE_AUTH_FILE_DIR.
	  Renamed MUNGE_AUTH_PIPE_RND_BYTES to MUNGE_AUTH_RND_BYTES.
	  Updated documentation.
	* src/libcommon/m_msg.h: Added a_pipe_len, a_pipe_str, a_pipe_is_copy,
	  a_file_len, a_file_str, a_file_is_copy to m_msg struct.
	* src/libcommon/m_msg.c: Added new m_msg struct variables to